<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_markets">

    <fragment
        android:id="@+id/navigation_markets"
        android:name="com.mulosbron.goldbazaar.view.fragment.market.MarketFragment"
        android:label="@string/markets"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.mulosbron.goldbazaar.view.fragment.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.mulosbron.goldbazaar.view.fragment.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <!-- Auth Fragments -->
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.mulosbron.goldbazaar.view.fragment.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_login_to_forgot_password"
            app:destination="@id/navigation_forgot_password"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_login_to_markets"
            app:destination="@id/navigation_markets"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_wallet"
            app:destination="@id/navigation_wallet"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.mulosbron.goldbazaar.view.fragment.auth.RegisterFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_forgot_password"
        android:name="com.mulosbron.goldbazaar.view.fragment.auth.ForgotPasswordFragment"
        android:label="@string/forgot_pwd"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_forgot_password_to_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_forgot_password_to_reset_password"
            app:destination="@id/navigation_reset_password"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reset_password"
        android:name="com.mulosbron.goldbazaar.view.fragment.auth.ResetPasswordFragment"
        android:label="@string/reset_pwd"
        tools:layout="@layout/fragment_reset_password">
        <action
            android:id="@+id/action_reset_password_to_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>